@@ -18,6 +18,7 @@ Changelog for 1.3.12
 * Adding missing permissions for editing parts (Chris T)
 * Clarified string for vendor's part number in parts screen (Frans S)
 * Recon checkbox now is set properly (Chris T)
+* Corrected missing "search assets" menu item (Chris T)
 
 Hilton D is Hilton Day
 
